localization feature added

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "ethers": "^5.1.4",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "i18next": "^20.3.2",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
+    "react-i18next": "^11.11.0",
     "react-native": "0.64.0",
     "react-native-bip39": "^2.3.0",
     "react-native-chart-kit": "^6.11.0",
