--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react-native": "0.64.1",
     "react-native-bip39": "^2.3.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
+    "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-level-fs": "^3.0.1",
@@ -58,6 +59,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-svg": "^12.1.1",
+    "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
@@ -92,6 +94,7 @@
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.2",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.1",
     "rn-nodeify": "^10.3.0"
   },
