--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ethers": "^5.1.4",
     "events": "^1.1.1",
     "https-browserify": "0.0.1",
+    "immutability-helper": "^3.1.1",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
