--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
+    "react-native-popup-menu": "^0.15.11",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
