WIP: verification screen

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
+    "react-native-radial-gradient": "^1.0.8",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -62,6 +63,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
