added filters / duplication check / suggestions & badwords checking WIP: structure & modify for metadata queue

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,8 @@ target 'DataUnion' do
 
   pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
 
+  pod 'ReactNativeKeyboardInput', :path => '../node_modules/react-native-keyboard-input'
+
   target 'DataUnionTests' do
     inherit! :complete
     # Pods for testing
