--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-autocomplete-input": "^5.0.0",
     "react-native-bip39": "^2.3.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-charts-wrapper": "^0.5.7",
