--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@truffle/hdwallet-provider": "^1.4.1",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
+    "axios": "^0.21.1",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "connect": "^3.7.0",
@@ -50,12 +51,15 @@
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
+    "react-native-document-picker": "^5.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
+    "react-native-popup-menu": "^0.15.11",
+    "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
