fixed "+" btn not-working issue fixed warning coming from list key updated to dropdown and its relevant handling updated upvote/downvote logic

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,9 @@ target 'DataUnion' do
     :hermes_enabled => false
   )
 
+  pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper' # do not delete this 
+
+
   target 'DataUnionTests' do
     inherit! :complete
     # Pods for testing
