--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-level-fs": "^3.0.1",
+    "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
     "react-native-popup-menu": "^0.15.11",
