--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.0.2",
+    "@coingecko/cryptoformat": "^0.4.4",
     "@oceanprotocol/lib": "^0.16.1",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
@@ -21,12 +22,14 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@sindresorhus/slugify": "^2.1.0",
     "@tradle/react-native-http": "^2.0.1",
     "@truffle/hdwallet-provider": "^1.4.1",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
+    "classnames": "^2.3.1",
     "connect": "^3.7.0",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
@@ -36,6 +39,8 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.1.4",
     "events": "^1.1.1",
+    "formik": "^2.2.9",
+    "gatsby": "^3.9.1",
     "https-browserify": "0.0.1",
     "immutability-helper": "^3.1.1",
     "node-libs-browser": "^2.2.1",
@@ -44,6 +49,7 @@
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
+    "react-dotdotdot": "^1.3.1",
     "react-native": "0.64.1",
     "react-native-bip39": "^2.3.0",
     "react-native-chart-kit": "^6.11.0",
@@ -69,22 +75,26 @@
     "react-native-webview": "^11.4.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
+    "react-toastify": "^7.0.4",
     "readable-stream": "^1.0.33",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "slugify": "^1.6.0",
     "store": "^2.0.12",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "styled-components": "^5.2.3",
+    "swr": "^0.5.6",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
