--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tags": "^2.2.0",
