--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'DataUnion' do
   pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper' # do not delete this 
 
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'DataUnionTests' do
     inherit! :complete
     # Pods for testing
