--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-i18next": "^11.11.1",
     "react-native": "0.64.1",
     "react-native-bip39": "^2.3.0",
+    "react-native-canvas": "^0.1.37",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
@@ -55,6 +56,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-level-fs": "^3.0.1",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
@@ -64,13 +66,14 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-webview": "^11.4.0",
+    "react-native-webview": "^11.6.5",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
