--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "react-native-popup-menu": "^0.15.11",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
+    "react-native-render-html": "^6.0.5",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-scroll-into-view": "^2.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
