--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
