--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
+    "react-native-document-picker": "^5.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -64,6 +65,7 @@
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
     "react-native-popup-menu": "^0.15.11",
+    "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-render-html": "^6.0.5",
