--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
+    "react-native-document-picker": "^5.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -60,10 +61,12 @@
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
     "react-native-popup-menu": "^0.15.11",
+    "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tags": "^2.2.0",
