--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
     "immutability-helper": "^3.1.1",
+    "lodash.groupby": "^4.6.0",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
