--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "@tradle/react-native-http": "^2.0.1",
     "@truffle/hdwallet-provider": "^1.4.1",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
+    "axios": "^0.21.1",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "connect": "^3.7.0",
