--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^2.1.0",
+    "react-native-rectangle-color-picker": "^1.0.2",
     "react-native-render-html": "^6.0.5",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
@@ -80,6 +81,7 @@
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
+    "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
