--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
+    "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
