--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "rn-nodeify --install fs,dgram,process,path,console --hack"
+    "postinstall": "rn-nodeify --install fs,dgram,process,path,console --hack",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios' --assets-dest ."
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.0.2",
