--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
   package="com.dataunion">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -10,6 +9,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:requestLegacyExternalStorage="true"
       android:allowBackup="false"
+      android:hardwareAccelerated="false"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
