--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-webview": "^11.6.5",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
