--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-image-picker": "^4.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
