--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
