--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
+    "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
@@ -100,8 +101,7 @@
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8",
-    "react-native-wheel-color-picker": "^1.1.0"
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
