--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
+    "react-native-use-styles": "^1.3.7",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
     "react-native-wheel-color-picker": "^1.1.0",
