--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
@@ -97,6 +98,7 @@
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
+    "use-nft": "^0.10.1",
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
