--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,11 +136,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.dataunion"
+        applicationId "com.visiotherapy"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "2.0"
+        versionCode 1
+        versionName "1.0"
     }
     splits {
         abi {
