--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-bip39": "^2.3.0",
     "react-native-canvas": "^0.1.37",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-circle-checkbox": "^0.1.6",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
     "react-native-document-picker": "^5.2.0",
