--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-image-helper": "^0.0.3",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^4.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modalize": "^2.0.12",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
@@ -97,6 +99,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "rn-faded-scrollview": "^1.0.11",
     "store": "^2.0.12",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
