--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-canvas": "^0.1.37",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circle-checkbox": "^0.1.6",
+    "react-native-copilot": "^2.5.1",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
     "react-native-document-picker": "^5.2.0",
@@ -87,6 +88,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
+    "react-native-tutorial-overlay": "^0.1.1",
     "react-native-udp": "^2.7.0",
     "react-native-use-styles": "^1.3.7",
     "react-native-vector-icons": "^8.1.0",
