--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.1.4",
     "events": "^1.1.1",
+    "hoist-non-react-statics": "^3.3.2",
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
     "immutability-helper": "^3.1.1",
     "lodash.groupby": "^4.6.0",
+    "mitt": "^3.0.0",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
@@ -56,7 +58,6 @@
     "react-native-canvas": "^0.1.37",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circle-checkbox": "^0.1.6",
-    "react-native-copilot": "^2.5.1",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^5.6.0",
     "react-native-document-picker": "^5.2.0",
