--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-modalize": "^2.0.12",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.9.1",
     "react-native-popup-menu": "^0.15.11",
     "react-native-progress": "^5.0.0",
