--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-native-popup-menu": "^0.15.11",
     "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "2.2.4",
     "react-native-render-html": "^6.0.5",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
@@ -84,6 +84,7 @@
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
+    "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
@@ -102,8 +103,7 @@
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8",
-    "react-native-wheel-color-picker": "^1.1.0"
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
