--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.0.2",
+    "@celo/contractkit": "^1.1.0",
+    "@celo/dappkit": "^1.1.0",
     "@oceanprotocol/lib": "^0.16.0",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
@@ -25,6 +27,7 @@
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "@tradle/react-native-http": "^2.0.1",
     "@truffle/hdwallet-provider": "^1.4.1",
+    "@walletconnect/react-native-dapp": "^1.6.6",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
     "axios": "^0.21.1",
@@ -39,6 +42,11 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.1.4",
     "events": "^1.1.1",
+    "expo": "^41.0.0",
+    "expo-linking": "~2.3.1",
+    "expo-splash-screen": "~0.11.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
     "immutability-helper": "^3.1.1",
@@ -73,10 +81,10 @@
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "2.2.4",
     "react-native-render-html": "^6.0.5",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-scroll-into-view": "^2.0.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "9.6.4",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tags": "^2.2.0",
@@ -114,6 +122,8 @@
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
+    "metro": "^0.64.0",
+    "metro-config": "^0.64.0",
     "metro-react-native-babel-preset": "^0.65.2",
     "react-test-renderer": "17.0.1",
     "rn-nodeify": "^10.3.0"
@@ -172,5 +182,8 @@
     "tty": "tty-browserify",
     "vm": "vm-browserify",
     "tls": false
+  },
+  "resolutions": {
+    "react-native-safe-area-context": "3.2.0"
   }
 }
