--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.12",
+    "@celo/contractkit": "^1.1.0",
+    "@celo/dappkit": "^1.1.0",
     "@oceanprotocol/lib": "^0.16.0",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
