--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.0.2",
+    "@coingecko/cryptoformat": "0.4.2",
+    "@oceanprotocol/art": "3.0.0",
     "@oceanprotocol/lib": "^0.16.0",
+    "@oceanprotocol/react": "^0.6.2",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
@@ -22,15 +25,18 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@sindresorhus/slugify": "1.0.0",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "@tradle/react-native-http": "^2.0.1",
     "@truffle/hdwallet-provider": "^1.4.1",
+    "@types/classnames": "2.2.11",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
-    "axios": "^0.21.1",
+    "axios": "0.21.0",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "clamp": "^1.0.1",
+    "classnames": "2.2.6",
     "connect": "^3.7.0",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
@@ -40,10 +46,13 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.1.4",
     "events": "^1.1.1",
+    "formik": "^2.1.5",
     "hoist-non-react-statics": "^3.3.2",
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
     "immutability-helper": "^3.1.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "4.0.8",
     "lodash.groupby": "^4.6.0",
     "mitt": "^3.0.0",
     "node-libs-browser": "^2.2.1",
@@ -53,6 +62,7 @@
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
     "react-i18next": "^11.11.1",
+    "react-markdown": "^5.0.2",
     "react-native": "0.64.1",
     "react-native-bip39": "^2.3.0",
     "react-native-canvas": "^0.1.37",
@@ -79,6 +89,7 @@
     "react-native-popup-menu": "^0.15.11",
     "react-native-progress": "^5.0.0",
     "react-native-randombytes": "^3.5.3",
+    "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "2.2.4",
     "react-native-rectangle-color-picker": "^1.0.2",
     "react-native-render-html": "^6.0.5",
@@ -98,6 +109,9 @@
     "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
     "react-redux": "^7.2.0",
+    "react-toastify": "6.1.0",
+    "react-usestateref": "^1.0.8",
+    "reactive-button": "^1.3.8",
     "readable-stream": "^1.0.33",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -108,6 +122,7 @@
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "styled-components": "^5.2.3",
+    "swr": "0.3.8",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
@@ -115,12 +130,15 @@
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/yup": "^0.29.13",
     "babel-cli": "^6.26.0",
     "babel-jest": "^26.6.3",
     "babel-preset-es2015": "^6.24.1",
