add pool and trade to newPlayAI

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^4.2.0",
     "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/drawer": "^5.12.5",
@@ -40,6 +41,7 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.1.4",
     "events": "^1.1.1",
+    "formik": "^2.2.9",
     "hoist-non-react-statics": "^3.3.2",
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
@@ -74,7 +76,7 @@
     "react-native-modalize": "^2.0.12",
     "react-native-multiple-select": "^0.5.6",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "^5.4.9",
+    "react-native-pager-view": "^5.4.11",
     "react-native-paper": "^4.9.1",
     "react-native-popup-menu": "^0.15.11",
     "react-native-progress": "^5.0.0",
@@ -82,12 +84,14 @@
     "react-native-reanimated": "2.2.4",
     "react-native-rectangle-color-picker": "^1.0.2",
     "react-native-render-html": "^6.0.5",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-scroll-into-view": "^2.0.1",
     "react-native-svg": "^12.1.1",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.1.1",
     "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
     "react-native-tutorial-overlay": "^0.1.1",
@@ -115,7 +119,8 @@
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
