--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@alch/alchemy-web3": "^1.1.12",
     "@oceanprotocol/lib": "^0.16.0",
     "@react-native-async-storage/async-storage": "^1.15.2",
-    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
@@ -58,6 +58,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-document-picker": "^5.2.0",
     "react-native-elements": "^3.4.2",
+    "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
