--- a/ios/DataUnion/Info.plist
+++ b/ios/DataUnion/Info.plist
@@ -57,9 +57,10 @@
 		<string>Zocial.ttf</string>
 		<string>Moon-Bold.otf</string>
 		<string>Moon-Light.otf</string>
+		<string>Inter-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Inter-Bold.ttf</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
