--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-native-webview": "^11.6.5",
     "react-native-wheel-color-picker": "^1.1.0",
     "react-native-youtube-iframe": "^2.0.1",
+    "react-query": "^3.34.16",
     "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
     "redux": "^4.0.5",
