--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^4.2.1",
     "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/drawer": "^5.12.5",
@@ -48,6 +49,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "formik": "^2.2.9",
     "hoist-non-react-statics": "^3.3.2",
     "https-browserify": "0.0.1",
     "i18next": "^20.3.2",
@@ -96,6 +98,7 @@
     "react-native-svg": "9.6.4",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.1.1",
     "react-native-tags": "^2.2.0",
     "react-native-tcp": "^3.3.2",
     "react-native-tutorial-overlay": "^0.1.1",
@@ -123,7 +126,8 @@
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
     "watchman": "^1.0.0",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
